--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "lodash": "^4.17.19",
+    "minimist": "^1.2.5",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "nodemon": "^2.0.2",
@@ -30,7 +32,5 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
